# pipeworks_mud_server

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  MANIFEST.in  MUD Server - Proof of Concept.md  MUD Server Architecture.md  README.md  change_password.py  client.py  codecov.yml  database.py  mkdocs.yml  mud_engine.py  package.json  pyproject.toml  pytest.ini  release-please-config.json  requirements-dev.txt  requirements-docs.txt  requirements.txt  run.sh  server.py  test_auth.py  test_password_change.py
.github/workflows/: ci-enhanced.yml  ci.yml  dependency-update.yml  release-please.yml  test-and-lint.yml
config/: server.example.ini
data/: world.json  world_data.json  world_data_pub_crawl.json
data/worlds/daily_undertaking/: world.json
data/worlds/pipeworks_web/: world.json
data/zones/: crooked_pipe.json  pipe_works.json
deploy/env/: mud-server.env.example
deploy/nginx/: admin.pipeworks.luminal.local
deploy/systemd/: pipeworks-dev.service
docs/: MUD Server - Quick Start Guide.md  Makefile  OPERATOR_GUIDE_API_ONLY.md  POLICY_SERVICE_PACKAGE_DESIGN.md  index.md  requirements.txt  the_undertaking_platform_vision.md  undertaking_code_examples.md  undertaking_supplementary_examples.md
docs/architecture/: index.md  overview.md
docs/developer/: testing.md
docs/getting-started/: installation.md
docs/includes/: abbreviations.md
docs/source/: admin_axis_inspector.rst  admin_web_ui_mtls.rst  api_reference.rst  architecture.rst  axis_state.rst  conf.py  database.rst  examples.rst  extending.rst  getting_started.rst  index.rst  lab_artifact_editor.rst  ledger.rst  operator_guide_api_only.rst  play_web_ui.rst  policy_service_package_design.rst  security.rst  translation_layer.rst
documentation/: index.md
documentation/api/: index.md
documentation/architecture/: index.md
documentation/design/: articulation.md  design-pillars.md  index.md  platform-vision.md
documentation/getting-started/: first-steps.md  index.md  installation.md  quick-start.md
documentation/implementation/: code-examples.md  index.md  supplementary-examples.md
examples/: README.md  ascii_demo.html
scripts/: __init__.py  gen_ref_pages.py  migrate_to_multiworld.py
src/mud_server/: __init__.py  cli.py  config.py
src/mud_server/admin_gradio/: app.py  utils.py
src/mud_server/admin_tui/: __init__.py  app.py  config.py  keybindings.py
src/mud_server/api/: auth.py  models.py  models_admin.py  models_auth_game.py  models_lab.py  models_policy.py  password.py  password_policy.py  permissions.py  routes.py  server.py
src/mud_server/axis/: __init__.py  engine.py  grammar.py  legacy_file_loader.py  migration_file_loader.py  resolvers.py  types.py
src/mud_server/client/: api_client.py  app.py  app.py.backup  utils.py
src/mud_server/core/: bus.py  engine.py  events.py  world.py  world_registry.py
src/mud_server/db/: admin_repo.py  axis_repo.py  characters_repo.py  chat_repo.py  connection.py  constants.py  database.py  errors.py  events_repo.py  facade.py  policy_repo.py  schema.py  sessions_repo.py  types.py  users_repo.py  worlds_repo.py
src/mud_server/ledger/: __init__.py  writer.py
src/mud_server/policies/: __init__.py  axis_policy.py  manifest_policy.py
src/mud_server/services/: __init__.py  character_provisioning.py  condition_axis_service.py  policy_service.py
src/mud_server/translation/: __init__.py  config.py  profile_builder.py  renderer.py  service.py  validator.py
src/mud_server/web/: __init__.py  routes.py
tests/: conftest.py  constants.py  test_cli.py  test_config.py  test_version.py
tests/admin_gradio/api/: test_admin.py  test_auth.py  test_base.py  test_game.py  test_ollama.py  test_settings.py
tests/admin_gradio/ui/: test_state.py  test_validators.py
tests/admin_tui/: __init__.py  test_api_client.py  test_config.py  test_create_user_screen.py  test_database_actions.py  test_database_screen_kick.py  test_database_screen_refresh.py  test_database_tabs.py  test_formatting.py  test_keybindings.py  test_keybindings_screens.py
tests/client/api/: test_auth.py
tests/client/ui/: test_validators.py
tests/js/: README.md  play_api.test.mjs  play_portal.test.mjs  play_session.test.mjs  users_state.test.mjs
tests/test_api/: __init__.py  test_admin.py  test_admin_create_character.py  test_auth.py  test_auth_helpers.py  test_condition_axis_contract_compatibility.py  test_condition_axis_service.py  test_lab.py  test_models.py  test_ollama.py  test_password_policy.py  test_permissions.py  test_pipeline_condition_axis.py  test_policies.py  test_policy_hash_snapshot.py  test_port_discovery.py  test_routes.py  test_routes_utils.py
tests/test_axis/: test_engine_chat.py  test_grammar.py  test_resolvers.py
tests/test_cli_port/: test_port_config.py
tests/test_core/: __init__.py  test_axis_policy.py  test_axis_policy_bootstrap.py  test_bus.py  test_engine.py  test_engine_kick.py  test_engine_translation.py  test_policy_manifest.py  test_policy_paths.py  test_policy_service.py  test_world.py  test_world_registry.py
tests/test_db/: test_admin_repo.py  test_axis_entity_profile.py  test_axis_event_ledger.py  test_axis_registry.py  test_axis_repo.py  test_axis_state_query.py  test_character_state_snapshot.py  test_characters_repo.py  test_chat_repo.py  test_connection_schema_phase1.py  test_database.py  test_database_admin_surface.py  test_database_characters_surface.py  test_database_chat_surface.py  test_database_error_surface.py  test_database_init_surface.py  test_database_sessions_surface.py  test_database_users_surface.py  test_events_repo.py  test_facade.py  test_facade_import_policy.py  test_migrate_multiworld.py  test_policy_repo.py  test_query_plan_hot_paths.py  test_sessions_repo.py  test_user_online_status.py  test_users_repo.py  test_worlds.py  test_worlds_repo.py
tests/test_ledger/: test_writer.py
tests/test_translation/: test_config.py  test_profile_builder.py  test_renderer.py  test_service.py  test_validator.py
tests/test_web/: test_web_routes.py
tools/: compliance_checker.py  large_files.sh
(+164 files in other folders)
