[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mud_server"
version = "0.3.4"
description = "A Python-based MUD (Multi-User Dungeon) server with web interface"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0-or-later"}

dependencies = [
    "fastapi==0.125.0",
    "uvicorn==0.38.0",
    "python-socketio==5.15.1",
    "python-multipart==0.0.22",
    "aiosqlite==0.22.0",
    "requests==2.32.5",
    "passlib==1.7.4",
    "bcrypt==3.2.2",  # Must be 3.x for passlib 1.7.4 compatibility
]

[project.urls]
Homepage = "https://github.com/pipe-works/pipeworks_mud_server"
Repository = "https://github.com/pipe-works/pipeworks_mud_server.git"
Issues = "https://github.com/pipe-works/pipeworks_mud_server/issues"

[project.scripts]
mud-server = "mud_server.cli:main"
pipeworks-admin-tui = "mud_server.admin_tui:main"

[project.optional-dependencies]
admin-tui = [
    "textual>=0.47.0",
    "httpx>=0.28.1",
]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.1",
    "respx>=0.22.0",
    "textual>=0.47.0",
    "ruff>=0.14.0",
    "black==26.1.0",  # PINNED org-wide to prevent formatting drift
    "mypy>=1.19.0",
    "bandit[toml]>=1.7.0",
]
docs = [
    "myst-parser>=4.0",
    "sphinx>=8.0,<9.0",
    "sphinx-autoapi>=3.0",
    "sphinx-autodoc-typehints>=3.5",
    "sphinx-rtd-theme>=3.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "docs*", "documentation*", "*__pycache__*"]

[tool.setuptools.package-data]
"mud_server.web" = [
  "templates/*.html",
  "static/css/*.css",
  "static/js/*.js",
  "static/js/pages/*.js",
  "static/js/ui/*.js",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "passlib.*",
    "textual.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

addopts = [
    "-v",
    "-ra",
    "--strict-markers",
    "--cov=mud_server",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]

markers = [
    "unit: Fast unit tests (isolated, mocked dependencies)",
    "integration: Integration tests requiring external resources (database, services)",
    "slow: Tests that take >5 seconds (deselect with '-m \"not slow\"')",
    "requires_model: Tests requiring ML model downloads (deselect with '-m \"not requires_model\"')",
    "api: API endpoint tests",
    "db: Database tests",
    "auth: Authentication and authorization tests",
    "game: Game logic tests (movement, inventory, chat)",
    "admin: Administrative function tests",
    "security: Security-related tests (XSS, timing attacks, auth bypass)",
]

[tool.coverage.run]
source = ["src/mud_server"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    # UI entry points (difficult to test, framework-specific)
    "*/admin_tui/app.py",
    "*/admin_tui/screens/*",
    "*/api/server.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "docs", "documentation"]
skips = ["B101"]  # Skip assert_used check (assertions are fine in tests)
